RESOLVED FIXED18663
[CAIRO] missing stroke-support for text
https://bugs.webkit.org/show_bug.cgi?id=18663
Summary [CAIRO] missing stroke-support for text
Dirk Schulze
Reported 2008-04-21 11:24:09 PDT
There is no stroke-support for texts in cairo yet.
Attachments
Add text-stroke (1.45 KB, patch)
2008-04-21 14:07 PDT, Dirk Schulze
eric: review+
Dirk Schulze
Comment 1 2008-04-21 14:07:05 PDT
Created attachment 20740 [details] Add text-stroke Added text-stroke to Cairo.
Eric Seidel (no email)
Comment 2 2008-05-01 19:36:33 PDT
Comment on attachment 20740 [details] Add text-stroke This looks fine. It's missing support for complex strokes though. But as a "first pass" this is fine.
Darin Adler
Comment 3 2008-06-08 13:34:24 PDT
Committed revision 34453.
Note You need to log in before you can comment on or make changes to this bug.