2008-06-08  Dirk Schulze  <vbs85@gmx.de>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=18663
        Add text-stroke support to Cairo.

        * platform/graphics/cairo/FontCairo.cpp:
        (WebCore::Font::drawGlyphs):



Canonical link: https://commits.webkit.org/26904@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34453 268f45cc-cd09-0410-ab3c-d52691b4dbfc